--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -1,7 +1,10 @@
 # Header
 menu:
   Home: /
-  Archives: /archives
+  Archives: /archives/
+  Categories: /categories/
+  Tags: /tags/
+  About: /about/
 rss: /atom.xml
 
 # Content
@@ -9,13 +12,14 @@ excerpt_link: Read More
 fancybox: true
 
 # Sidebar
-sidebar: right
+sidebar: left
 widgets:
 - category
 - tag
 - tagcloud
 - archive
 - recent_posts
+
 
 # display widgets at the bottom of index pages (pagination == 2)
 index_widgets:
@@ -25,7 +29,7 @@ index_widgets:
 
 # widget behavior
 archive_type: 'monthly'
-show_count: false
+show_count: true
 
 # Miscellaneous
 google_analytics:
